# assemble

./: .gitignore  README.md  pyproject.toml
app/agent/: base.py  messages.py
app/agent/react/: agent.py
app/agents/: base.py
app/agents/react/: agent.py
app/core/agents/: base.py
app/core/llm/: generator.py
app/core/memory/: memory.py
app/core/states/: base.py
app/core/tools/: adapter.py  helper.py
app/llm/: adapter.py  generator.py  types.py
app/llm/llamacpp/: service.py
app/llm/openai/: service.py
app/memory/: memory.py  scratch_pad.py
app/persona/: persona.py
app/state/: defaults.py  node.py
app/state/final_answer/: constants.py  factory.py
app/states/: base.py  defaults.py
app/states/final_answer/: state.py
app/states/rewrite_question/: state.py
app/states/summarize_messages/: state.py
app/tools/langchain/: wikipedia_query_run.py  wrapper.py  yahoo_finance_news.py
assemble/app/agents/react/: agent.py
assemble/app/core/: types.py
assemble/app/core/agents/: base.py
assemble/app/core/llm/: generator.py
assemble/app/core/memory/: memory.py
assemble/app/core/states/: base.py  states.py
assemble/app/core/tools/: helper.py
assemble/app/llm/llamacpp/: service.py
assemble/app/states/: defaults.py
examples/conversation_tool_agent/: example_llamacpp.ipynb  example_oai.ipynb
examples/delegation_agent/: example.ipynb  example_llamacpp.ipynb
examples/multi_agent_concurreny/: example.ipynb
examples/react_agent/: example_llamacpp.ipynb  example_oai.ipynb
examples/tool_agent/: example_llamacpp.ipynb  example_oai.ipynb
(+5 files in other folders)
